# hackathon01-docbook

./: .gitignore  CLAUDE.md  Dockerfile  OpenAIAgents_SampleCode.md  PLAN.md  README.md  chatkit_Knowledge.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js  specify_prompt.md  tsconfig.json
.claude/: agents.rar  settings.local.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.specify/memory/: constitution.md
backend/: agent.py  api.py  api_models.py  config.py  database.py  errors.py  evaluation.py  logging_config.py  main.py  models.py  pydantic_patch.py  pyproject.toml  retrieval.py  server.py  validation.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: __init__.py  conftest.py  golden_queries.json  test_api_smoke.py  test_retrieval.py  test_validation.py
backend/tests/integration/: __init__.py  test_e2e_retrieval.py
docs/: chat-assistant.md  index.md
docs/module-01-ros2/: frontmatter-template.md
docs/module-02-digital-twin/: _category_.json  _template.mdx  index.mdx
examples/ros2_advanced/: action_client.py  action_server.py  parameter_example.py
examples/ros2_basics/: publisher_node.py  subscriber_node.py
examples/ros2_communication/: advanced_pubsub.py  service_client.py  service_server.py
examples/ros2_launch/: composable_nodes.py  demo_launch.py  integrated_system.launch.py
examples/urdf/: basic_robot.urdf
src/css/: custom.css
(+253 files in other folders)
